# hyper-fund

./: .gitignore  README.md  pyproject.toml
api/: main.py  routes.py  schemas.py
scripts/: dev.sh  test_cex.py  test_hl.py
src/hyper_fund/: alerts.py  core.py  main.py  models.py
src/hyper_fund/bot/: formatters.py  handlers.py
src/hyper_fund/exchanges/: cex.py  hyperliquid.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: AddressLookup.tsx  CoinDetail.tsx  CostBreakdown.tsx  ExchangeBadge.tsx  ExchangeFilter.tsx  FundingGuide.tsx  Header.tsx  NumberCell.tsx  PredictedFunding.tsx  RateBar.tsx  SectionHeading.tsx  SpreadTable.tsx
web/app/hooks/: useAutoRefresh.ts
web/lib/: api.ts  majors.ts  utils.ts
